<resources>
    <string name="app_name">MOFs</string>
    <string name="welcome">Welcome to MOFs</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="newGroup">New Group</string>
    <string name="groupName">Group Name</string>
    <string name="signOut">Sign Out</string>
    <string name="newPlace">New Place</string>
    <string name="groupMessage">Group Message</string>
    <string name="aboutGroup">About Group</string>
    <string name="newFriend">New Friend</string>
    <string name="newFriendMessage">What is your friend\'s username?</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="friends">Friends</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicHB0dDk2MiIsImEiOiJja2U2MHd0NzcwZ21oMzBvYXhxN2h2aGlnIn0.c2C2ouVeKFUOpFrwV9efOw</string>
    <string name="username_font">sans-serif-medium</string>
    <string name="notification">Notification</string>
    <string name="detailsOfTheMarker">Details of the marker</string>
    <string name="nameTheMarker">Name the marker</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="markerName">Marker name</string>
    <string name="markerDescription">Marker description</string>
    <string name="chooseImage">Choose Image</string>
    <string name="message">Message</string>
    <string name="newLocation">New lat: %1$s New longitude: %2$s</string>
    <string name="userLocationPermissionExplanation">This app needs location permissions in order to show its functionality.</string>
    <string name="userLocationPermissionNotGranted">You didn\'t grant location permissions.</string>
    <string name="newMember">New member</string>
</resources>