<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newGroup"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"
        android:title="@string/newGroup" />

<!--    <group android:checkableBehavior="single">-->
<!--        <item android:title="">-->
<!--            <menu>-->
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_mess"
                    android:icon="@drawable/ic_baseline_settings_applications_24"
                    android:title="@string/settings" />

<!--            </menu>-->

<!--        </item>-->

<!--    </group>-->

    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_leave_group"
        android:title="Sign Out"
        android:onClick="navigationClicked"/>

</menu>
